Revise CV content for Lizeth Casillas
Updated personal information, skills, and education details.

--- a/ejemplo1/cv.html
+++ b/ejemplo1/cv.html
@@ -9,18 +9,19 @@
     <h1>CV Lizeth Casillas</h1>
 
     <h3>Acerca de mi</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam sed nesciunt, id, praesentium repellendus, ipsa quidem corporis obcaecati modi ratione animi! Tempore libero quae voluptas quod, vero nostrum tenetur repudiandae?</p>
+    <p>Estudiante ingenieria en sistemas, tengo 25 años de edad</p>
 <h3>Habilidades</h3>
 <ul>
-    <li>habiidad 1</li>
-    <li>habilidad 2</li>
-    <li>habilidad 3</li>
+    <li>Comunicacion efectiva</li>
+    <li>Trabajo en equipo</li>
+    <li>Adaptibilidad</li>
 </ul>
-<h3>Estudios realizados</h3>
+<h3>Estudios </h3>
 <ol>
-    <li>basica 1</li>
-    <li>media 2</li>
-    <li>superior 3</li>
+    <li>En secundaria me certifique en taller de computacion</li>
+    <li>En media superior me gradue en el taller informatica</li>
+    <li>Superior cursando ingenieria ensistemas computaciones</li>
 </ol>
 </body>
+
 </html>
