Fix HTML formatting in cv.html

--- a/ejemplo1/cv.html
+++ b/ejemplo1/cv.html
@@ -14,7 +14,7 @@
 <ul>
     <li>Comunicacion efectiva</li>
     <li>Trabajo en equipo</li>
-    <li>Adaptibilidad</li>
+    <li>Adaptabilidad</li>
 </ul>
 <h3>Estudios </h3>
 <ol>
@@ -25,3 +25,4 @@
 </body>
 
 </html>
+
